Bug 439718 - In “Brush Presets”, tags other than All and All Untagged do not show that the brush presets have been changed.
Summary: In “Brush Presets”, tags other than All and All Untagged do not show that the...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Lynx3d
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-10 10:11 UTC by Eranthis stellata Maxim
Modified: 2021-07-25 09:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eranthis stellata Maxim 2021-07-10 10:11:43 UTC
SUMMARY

In “Brush Presets”, tags other than All and All Untagged do not show that the brush presets have been changed.

STEPS TO REPRODUCE
https://krita-artists.org/t/5-0-in-brush-presets-tags-other-than-all-and-all-untagged-do-not-show-that-the-brush-presets-have-been-changed/25761

Krita

 Version: 5.0.0-prealpha (git 13f04ca)
 Languages: zh_CN, zh, en_US, en
 Hidpi: true

Qt

  Version (compiled): 5.12.11
  Version (loaded): 5.12.11

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19042
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10

OpenGL Info
 
  Vendor:  "Google Inc." 
  Renderer:  "ANGLE (NVIDIA GeForce GTX 970 Direct3D11 vs_5_0 ps_5_0)" 
  Version:  "OpenGL ES 3.0 (ANGLE 2.1.0.57ea533f79a7)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0.57ea533f79a7)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
     Version: 3.0
     Supports deprecated functions false 
     is OpenGL ES: true 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 

Hardware Information

  GPU Acceleration: auto
  Memory: 32693 Mb
  Number of Cores: 16
  Swap Location: C:/Users/xi/AppData/Local/Temp

Current Settings

  Current Swap Location: C:/Users/xi/AppData/Local/Temp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 30
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Use AMD Vectorization Workaround: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 900
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Display Information
Number of screens: 2
	Screen: 0
		Name: \\.\DISPLAY1
		Depth: 32
		Scale: 1
		Resolution in pixels: 2560x1440
		Manufacturer: 
		Model: 
		Refresh Rate: 59
	Screen: 1
		Name: \\.\DISPLAY2
		Depth: 32
		Scale: 1
		Resolution in pixels: 1920x1080
		Manufacturer: 
		Model: 
		Refresh Rate: 60
Comment 1 Lynx3d 2021-07-25 09:24:48 UTC
Git commit 81addad7335290169a9a0d5c78d06d1da1728088 by Mathias Wein.
Committed on 24/07/2021 at 14:10.
Pushed by rempt into branch 'master'.

Fix SQL query in KisResourceQueryMapper::variantFromResourceQueryById

The missing match on storage ID gave invalid storage location and
hence the query if a resource is dirty failed.

M  +1    -0    libs/resources/KisResourceQueryMapper.cpp

https://invent.kde.org/graphics/krita/commit/81addad7335290169a9a0d5c78d06d1da1728088
Comment 2 Lynx3d 2021-07-25 09:24:56 UTC
Git commit 85bb2715697dd77a89eeca053a2fa5eeb4b5129d by Mathias Wein.
Committed on 24/07/2021 at 14:55.
Pushed by rempt into branch 'master'.

Fix Brush Preset Docker having wrong selection initially

Also remove some redundant function calls that were found during
investigation of the issues.

Together with the previous commits, this should fix bug 439718.

M  +0    -2    libs/resources/KisTagFilterResourceProxyModel.cpp
M  +1    -2    plugins/dockers/presetdocker/presetdocker_dock.cpp

https://invent.kde.org/graphics/krita/commit/85bb2715697dd77a89eeca053a2fa5eeb4b5129d
Comment 3 Eranthis stellata Maxim 2021-07-25 09:35:37 UTC
(In reply to Lynx3d from comment #2)
> Git commit 85bb2715697dd77a89eeca053a2fa5eeb4b5129d by Mathias Wein.
> Committed on 24/07/2021 at 14:55.
> Pushed by rempt into branch 'master'.
> 
> Fix Brush Preset Docker having wrong selection initially
> 
> Also remove some redundant function calls that were found during
> investigation of the issues.
> 
> Together with the previous commits, this should fix bug 439718.
> 
> M  +0    -2    libs/resources/KisTagFilterResourceProxyModel.cpp
> M  +1    -2    plugins/dockers/presetdocker/presetdocker_dock.cpp
> 
> https://invent.kde.org/graphics/krita/commit/
> 85bb2715697dd77a89eeca053a2fa5eeb4b5129d

thank you.