Fix Brush Preset Docker having wrong selection initially

Also remove some redundant function calls that were found during
investigation of the issues.

Together with the previous commits, this should fix bug 439718.

BUG:439718